# 26a-emb-aps-1-aps1_cp

main/: CMakeLists.txt  Fail.h  Jogo.h  Ponto.h  Start.h  Undaia.h  audio.c  audio.h  genius.c  genius.h  main.c
